examples/test/testpolicy13548.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13548
  namespace: namespace357
spec:
  podSelector:
    matchLabels:
      key5: value20
      key17: value22
      key35: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value49
          key11: value44
          key46: value41
